--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -1,13 +1,13 @@
 ---
 output:
-  bookdown::html_document2:
-    pandoc_args:
-    - --csl
-    - references/apa.csl
   bookdown::pdf_document2:
     includes:
       in_header: latex/preamble.tex
       before_body: latex/titlepage.tex
+    pandoc_args:
+    - --csl
+    - references/apa.csl
+  bookdown::html_document2:
     pandoc_args:
     - --csl
     - references/apa.csl
@@ -465,75 +465,68 @@ Stroke Data Classification using a Neural Network. In the following model "strok
 stroke_data_nn <- stroke_data
 ```
 
-```{r}
-#open all the libraries needed
-library (dplyr)
-library (tidyverse)
-library (neuralnet)
-library (caret)
-```
 
 ```{r}
 #lets have a look at the data 
-str(stroke_data_nn)
-stroke_data_nn %>% ggplot(aes(x= bmi, y = age, color= stroke)) + geom_point()
+#str(stroke_data_nn)
+#stroke_data_nn %>% ggplot(aes(x= bmi, y = age, color= stroke)) + geom_point()
 ```
 
 ```{r}
 #prepare the data for training
-set.seed(123)
-indices <- createDataPartition(stroke_data_nn$stroke, p=.7, list = F)
+#set.seed(123)
+#indices <- createDataPartition(stroke_data_nn$stroke, p=.7, list = F)
 ```
 
 ```{r}
 #make subsets
-train <- stroke_data_nn %>%
-  slice(indices)
-test_in <- stroke_data_nn %>%
-  slice(-indices)%>%
-  select(-stroke)
-test_truth <- stroke_data_nn%>%
-  slice(-indices)%>%
-  pull(stroke)
+# train <- stroke_data_nn %>%
+#   slice(indices)
+# test_in <- stroke_data_nn %>%
+#   slice(-indices)%>%
+#   select(-stroke)
+# test_truth <- stroke_data_nn%>%
+#   slice(-indices)%>%
+#   pull(stroke)
 ```
 
 ```{r include=FALSE}
 #train the neural network with the variables (hypertension, heart disease and avg. glucose level)
-library(neuralnet)
-
-stroke_data_net <- neuralnet(stroke ~ hypertension + heart_disease + avg_glucose_level , train, hidden = c(4,3),stepmax=1e+06, linear.output = T)
-
-#plot the neural network itself to see how it looks (in this case not plotted, takes quiet a while to compute)
-
-#plot(stroke_data_net)
+# library(neuralnet)
+# 
+# stroke_data_net <- neuralnet(stroke ~ hypertension + heart_disease + avg_glucose_level , train, hidden = c(4,3),stepmax=1e+06, linear.output = T)
+# 
+# #plot the neural network itself to see how it looks (in this case not plotted, takes quiet a while to compute)
+# 
+# #plot(stroke_data_net)
 ```
 
 
 ```{r include=FALSE}
 # lets make the first predictions
-test_results <- neuralnet::compute(stroke_data_net,test_in)
-test_results$net.result
+# test_results <- neuralnet::compute(stroke_data_net,test_in)
+# test_results$net.result
 ```
 
 ```{r}
 #by having a look at the test_result, it can be discovered, that only the second column is of interest
-test_pred <- test_results$net.result[,2]
+# test_pred <- test_results$net.result[,2]
 ```
 
 ```{r}
 #using 0.1 cutoff
-test_pred <- as.factor(ifelse(test_pred < 0.1, yes = 0, no = 1))
+# test_pred <- as.factor(ifelse(test_pred < 0.1, yes = 0, no = 1))
 ```
 
 
 ```{r}
-test_pred <- factor(levels(test_truth)[test_pred],levels = levels(test_truth))
+# test_pred <- factor(levels(test_truth)[test_pred],levels = levels(test_truth))
 ```
 
 
 ```{r}
-conf_matrix <- confusionMatrix(test_pred,test_truth)
-conf_matrix
+# conf_matrix <- confusionMatrix(test_pred,test_truth)
+# conf_matrix
 ```
 
 ```{r}
@@ -558,20 +551,20 @@ It can be discovered, that the model shows an accuracy of 90%, when the cutoff i
 
 ```{r}
 #lets make an improved predictions
-test_results01 <- neuralnet::compute(stroke_data_net,test_in)
-test_results01$net.result
+# test_results01 <- neuralnet::compute(stroke_data_net,test_in)
+# test_results01$net.result
 
 # by having a look at the test_result, it can be discovered, that only the second column is of interest
-test_pred01 <- test_results$net.result[,2]
-
-#using 0.2 cutoff
-test_pred01 <- as.factor(ifelse(test_pred01 < 0.2, yes = 0, no = 1))
-
-test_pred01 <- factor(levels(test_truth)[test_pred01],levels = levels(test_truth))
-
-
-conf_matrix <- confusionMatrix(test_pred01,test_truth)
-conf_matrix
+# test_pred01 <- test_results$net.result[,2]
+# 
+# #using 0.2 cutoff
+# test_pred01 <- as.factor(ifelse(test_pred01 < 0.2, yes = 0, no = 1))
+# 
+# test_pred01 <- factor(levels(test_truth)[test_pred01],levels = levels(test_truth))
+# 
+# 
+# conf_matrix <- confusionMatrix(test_pred01,test_truth)
+# conf_matrix
 ```
 
 It can be discovered, that the model shows an accuracy of 94.45%,when the cutoff is set at 0.2. Slight improvement regarding the accuracy. But a complete decrease in Specificity.
@@ -726,8 +719,8 @@ table(df_train_svm$stroke)
 ```
 
 ```{r echo=T, results='hide'}
-summary(df_train)
-summary(df_test)
+summary(df_train_svm)
+summary(df_test_svm)
 ```
 
 In the following SVM Model we set the kernel to radial and cost to 5. In the following the SVM Classification Plot is shown. It seems that Age is the bigger influence on having a stroke or not compared to the BMI. 
@@ -811,6 +804,5 @@ confusionMatrix(svm_prediction_tuned,df_test_svm$stroke)
 All our approaches lead to interesting outcomes. The accuracy of the models(SVM,NN,GAM) range between 94% - 95%, means the predictions calculated, compared to the test data was quiet accurate. Nevertheless, when we have a closer look at the all the confusion matrix of each model, it is clearly visible, that these models cannot really predict a stroke or which factor could increase the risk of having a stroke. There are two factors that contribute to leading us to the conclusion. On the one hand, the data itself may not be comprehensive enough to precisely predict a stroke. On the other hand, the dataset is very imbalanced, skewing heavily towards non-stroke outcomes. Perhaps further analysis would have to be done with a more balanced dataset, or we would have to reduce our dataset to make it more balanced. With the very limited stroke outcomes in this dataset, however, a fully adjusted dataset for balance would have resulted in too small of a sample in our case with the data at hand.
 
 For our use case as a smartwatch manufacturer, based on the data analyzed, we would not market stroke prediction to our users, but rather suggest healthy lifestyle adjustments based on our predictions, informing users that their current values indicate a slightly elevated risk of stroke in the long term. 
-After evaluating all these different ML methods and models, as a business, we would implement the neural network approach, as it has given us slightly higher accuracy than the other models.
 
 \newpage
